--- a/projeto-LAMA/.env
+++ b/projeto-LAMA/.env
@@ -1,7 +1,7 @@
-DB_USER = 
-DB_PASSWORD = 
-DB_HOST = 
+DB_USER = 4416122-bianca-paccola
+DB_PASSWORD = 85J9phKq+ztaY7drAqPN
+DB_HOST = 35.226.146.116
 DB_PORT = 3306
-JWT_KEY = 
-DB_DATABASE_NAME = 
+JWT_KEY = javascript
+DB_DATABASE_NAME = jbl-4416122-bianca-paccola
 ACCESS_TOKEN_EXPIRES_IN = 30min
